lib/dcimgui/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImGuiID;      
typedef struct ImGuiMultiSelectIO_t ImGuiMultiSelectIO;                        
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef int ImGuiCond;            
typedef int ImGuiDataType;        
typedef int ImGuiColorEditFlags;    
typedef int ImGuiInputTextFlags;    
typedef int ImGuiMultiSelectFlags;  
typedef int ImGuiSelectableFlags;   
typedef int ImGuiTreeNodeFlags;     
typedef ImS64 ImGuiSelectionUserData;
struct ImVec4_t
{
    float x, y, z, w;
};
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count);  
CIMGUI_API bool ImGui_ComboCallbackEx(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_InputDouble(const char* label, double* v);                                                                                  
CIMGUI_API bool ImGui_InputDoubleEx(const char* label, double* v, double step , double step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputScalar(const char* label, ImGuiDataType data_type, void* p_data);                                                      
CIMGUI_API bool ImGui_InputScalarEx(const char* label, ImGuiDataType data_type, void* p_data, const void* p_step , const void* p_step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components);                                     
CIMGUI_API bool ImGui_InputScalarNEx(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_step , const void* p_step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_ColorEdit3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorEdit4(const char* label, float col[4], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorPicker3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorPicker4(const char* label, float col[4], ImGuiColorEditFlags flags , const float* ref_col );
CIMGUI_API bool ImGui_ColorButton(const char* desc_id, ImVec4 col, ImGuiColorEditFlags flags );                                      
CIMGUI_API bool ImGui_ColorButtonEx(const char* desc_id, ImVec4 col, ImGuiColorEditFlags flags , ImVec2 size );  
CIMGUI_API void ImGui_SetColorEditOptions(ImGuiColorEditFlags flags);                                                                         
CIMGUI_API bool  ImGui_TreeNode(const char* label);
CIMGUI_API bool  ImGui_TreeNodeStrUnformatted(const char* str_id, const char* text);                                               
CIMGUI_API bool  ImGui_TreeNodePtrUnformatted(const void* ptr_id, const char* text);                                               
CIMGUI_API bool  ImGui_TreeNodeEx(const char* label, ImGuiTreeNodeFlags flags );
CIMGUI_API bool  ImGui_TreeNodeExStrUnformatted(const char* str_id, ImGuiTreeNodeFlags flags, const char* text);
CIMGUI_API bool  ImGui_TreeNodeExPtrUnformatted(const void* ptr_id, ImGuiTreeNodeFlags flags, const char* text);
CIMGUI_API void  ImGui_TreePush(const char* str_id);                                                                               
CIMGUI_API void  ImGui_TreePushPtr(const void* ptr_id);                                                                            
CIMGUI_API void  ImGui_TreePop(void);                                                                                              
CIMGUI_API float ImGui_GetTreeNodeToLabelSpacing(void);                                                                            
CIMGUI_API bool  ImGui_CollapsingHeader(const char* label, ImGuiTreeNodeFlags flags );                                    
CIMGUI_API bool  ImGui_CollapsingHeaderBoolPtr(const char* label, bool* p_visible, ImGuiTreeNodeFlags flags );            
CIMGUI_API void  ImGui_SetNextItemOpen(bool is_open, ImGuiCond cond );                                                    
CIMGUI_API void  ImGui_SetNextItemStorageID(ImGuiID storage_id);                                                                   
CIMGUI_API bool  ImGui_TreeNodeGetOpen(ImGuiID storage_id);                                                                        
CIMGUI_API bool ImGui_Selectable(const char* label);                                                                                                         
CIMGUI_API bool ImGui_SelectableEx(const char* label, bool selected , ImGuiSelectableFlags flags , ImVec2 size );  
CIMGUI_API bool ImGui_SelectableBoolPtr(const char* label, bool* p_selected, ImGuiSelectableFlags flags );                                          
CIMGUI_API bool ImGui_SelectableBoolPtrEx(const char* label, bool* p_selected, ImGuiSelectableFlags flags , ImVec2 size );      
CIMGUI_API ImGuiMultiSelectIO* ImGui_BeginMultiSelect(ImGuiMultiSelectFlags flags);                             
CIMGUI_API ImGuiMultiSelectIO* ImGui_BeginMultiSelectEx(ImGuiMultiSelectFlags flags, int selection_size , int items_count );
CIMGUI_API ImGuiMultiSelectIO* ImGui_EndMultiSelect(void);
CIMGUI_API void                ImGui_SetNextItemSelectionUserData(ImGuiSelectionUserData selection_user_data);
CIMGUI_API bool                ImGui_IsItemToggledSelection(void);                                              
CIMGUI_API bool ImGui_BeginListBox(const char* label, ImVec2 size );                                                                         
CIMGUI_API void ImGui_EndListBox(void);                                                                                                                          
CIMGUI_API bool ImGui_ListBox(const char* label, int* current_item, const char*const items[], int items_count, int height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count);  
CIMGUI_API bool ImGui_ListBoxCallbackEx(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLines(const char* label, const float* values, int values_count);                                                  
CIMGUI_API void ImGui_PlotLinesEx(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogram(const char* label, const float* values, int values_count);                                              
CIMGUI_API void ImGui_PlotHistogramEx(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API bool ImGui_BeginMenuBar(void);                                         
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowWorkAreaInsets(void (*getWindowWorkAreaInsetsFunc)(ImGuiViewport* vp, ImVec4* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowFramebufferScale(void (*getWindowFramebufferScaleFunc)(ImGuiViewport* vp, ImVec2* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowPos(void (*getWindowPosFunc)(ImGuiViewport* vp, ImVec2* result));    
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowSize(void (*getWindowSizeFunc)(ImGuiViewport* vp, ImVec2* result));  