src/imguics/DCImGui.cs

    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputDoubleEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, double step, double step_fast, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputDouble([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputScalarEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, System.IntPtr p_step, System.IntPtr p_step_fast, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputScalar([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputScalarNEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, int components, System.IntPtr p_step, System.IntPtr p_step_fast, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputScalarN([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, int components);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ColorEdit3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr col, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ColorEdit4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr col, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ColorPicker3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr col, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ColorPicker4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr col, int flags, System.IntPtr ref_col);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ColorButtonEx([MarshalAs(UnmanagedType.LPUTF8Str)] string desc_id, ImVec4 col, int flags, ImVec2 size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ColorButton([MarshalAs(UnmanagedType.LPUTF8Str)] string desc_id, ImVec4 col, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetColorEditOptions(int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TreeNode([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TreeNodeStrUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, [MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TreeNodePtrUnformatted(System.IntPtr ptr_id, [MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TreeNodeEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TreeNodeExStrUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int flags, [MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TreeNodeExPtrUnformatted(System.IntPtr ptr_id, int flags, [MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TreePush([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TreePushPtr(System.IntPtr ptr_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TreePop();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetTreeNodeToLabelSpacing();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_CollapsingHeader([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_CollapsingHeaderBoolPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr p_visible, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextItemOpen([MarshalAs(UnmanagedType.I1)] bool is_open, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextItemStorageID(uint storage_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TreeNodeGetOpen(uint storage_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SelectableEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.I1)] bool selected, int flags, ImVec2 size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_Selectable([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SelectableBoolPtrEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr p_selected, int flags, ImVec2 size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SelectableBoolPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr p_selected, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_BeginMultiSelectEx(int flags, int selection_size, int items_count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_BeginMultiSelect(int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_EndMultiSelect();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextItemSelectionUserData(long selection_user_data);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemToggledSelection();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginListBox([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndListBox();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ListBox([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr current_item, System.IntPtr items, int items_count, int height_in_items);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ListBoxCallbackEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr current_item, System.IntPtr getter, System.IntPtr user_data, int items_count, int height_in_items);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ListBoxCallback([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr current_item, System.IntPtr getter, System.IntPtr user_data, int items_count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PlotLinesEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr values, int values_count, int values_offset, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay_text, float scale_min, float scale_max, ImVec2 graph_size, int stride);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PlotLines([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr values, int values_count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PlotLinesCallbackEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr values_getter, System.IntPtr data, int values_count, int values_offset, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PlotLinesCallback([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr values_getter, System.IntPtr data, int values_count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PlotHistogramEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr values, int values_count, int values_offset, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay_text, float scale_min, float scale_max, ImVec2 graph_size, int stride);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PlotHistogram([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr values, int values_count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PlotHistogramCallbackEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr values_getter, System.IntPtr data, int values_count, int values_offset, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PlotHistogramCallback([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr values_getter, System.IntPtr data, int values_count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginMenuBar();
